--- a/index.html
+++ b/index.html
@@ -355,82 +355,98 @@
 </section>
 
 
+
 <!--ВЁРСТКА ФУТЕРА-->
 <section>
     <div class="container">
 
-        <div class="footer_menu">
-            <ul>
-                <li><a href="404.html">О проекте</a></li>
-                <li><a href="404.html">Контакты</a></li>
-                <li><a href="404.html">Редакция</a></li>
-                <li><a href="404.html">Реклама</a></li>
-                <li><a href="404.html">Благотворительность</a></li>
-                <li><a href="404.html">Карта сайта</a></li>
-                <li><a href="404.html">Политика конфиденциальности</a></li>
-            </ul>
+        <div class="footer1">
+            <div class="footer1-menu">
+                <ul>
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">О проекте</a>
+                    </li>
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Реклама</a>
+                    </li>
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Пожертвование</a>
+                    </li>
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Лицензия</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer1-img">
+               <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
+               <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
+            </div>
         </div>
 
-        <div class="under_footer_full">
+        <div class="footer2">
 
-            <div class="footer_logo_full">
-                <div class="footer_logo">
-                    <div class="footer_logo_prototip">
-                        <img src="img/main/article1.jpg" alt="">
+            <div class="footer2-logo">
+                <div class="footer-logo-img">
+                    <div class="footer-logo-prototip">
+                        <img src="../img/Global/logo.png" alt="">
                     </div>
 
-                    <div class="footer_logo_text">
+                    <div class="footer2-logo-text">
                         Стань олигархом с нами
                     </div>
                 </div>
             </div>
 
-            <div class="under_footer_Full">
-                <div class="under_footer1">
-                    <div class="footer-bottom">
+            <div class="footer2-content">
+                <div class="footer2-content-up">
+                    <div class="footer2-content-up-bottom">
                         <div class="img_download_GooglePlay">
-                            <img src="img/main/AppStore2.svg" alt="">
+                            <img src="../img/main/AppStore2.svg" alt="">
                         </div>
                         <div class="img_download_AppStore">
                             <div class="img_download_AppStore">
-                                <img src="img/main/AppStore.svg" alt="">
+                                <img src="../img/main/AppStore.svg" alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="footer_icon_social_network">
-                        <div class="icon_sn">
-                            <img src="img/main/vk.png" alt="">
-                        </div>
-                        <div class="icon_sn">
-                            <img src="img/main/vk.png" alt="">
-                        </div>
-                        <div class="icon_sn">
-                            <img src="img/main/vk.png" alt="">
-                        </div>
-                        <div class="icon_sn">
-                            <img src="img/main/vk.png" alt="">
-                        </div>
-                        <div class="icon_sn">
-                            <img src="img/main/vk.png" alt="">
-                        </div>
-                        <div class="icon_sn">
-                            <img src="img/main/vk.png" alt="">
-                        </div>
-                        <div class="icon_sn">
-                            <img src="img/main/vk.png" alt="">
-                        </div>
+                    <div class="footer2-content-up-icon">
+                        <ul class="footer_icon_social_network-list">
+                            <li><a href="#"><i class="fab fa-vk"></i></a></li>
+                            <li><a href="#"><i class="fab fa-telegram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-discord"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-odnoklassniki"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-odnoklassniki"></i></a></li>
+                        </ul>
                     </div>
                 </div>
 
-                <div class="under_footer2">
-                    <div class="footer-license">
-                        Любое использование материалов допускается только с согласия Андрюши
-                        <br>
-                        Мы не используем файлы cookie так как уважаем вашу конфиденсиальность
+                <div class="footer2-content-down">
+                    <div class="footer2-content-down-license">
+                        Использование материалов допускается только с согласия Андрюши
                     </div>
 
-                    <div class="footer_creature">
-                        Создание: Andrusha_Editions
+                    <div class="footer2-content-down-creature">
+                        <div class="footer2-content-down-creature-text">
+                            <span>Создание: Andrusha_Editions</span>
+                        </div>
                     </div>
                 </div>
             </div>
