--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
                 </ul>
             </div>
             <div class="footer1-img">
-               <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
-               <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
+               <img src="img/Global/Footer/mushroom.png" alt="" class="mushroom">
+               <img src="img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
             </div>
         </div>
 
@@ -404,7 +404,7 @@
             <div class="footer2-logo">
                 <div class="footer-logo-img">
                     <div class="footer-logo-prototip">
-                        <img src="../img/Global/logo.png" alt="">
+                        <img src="img/Global/logo.png" alt="">
                     </div>
 
                     <div class="footer2-logo-text">
