--- a/html/GameOne.html
+++ b/html/GameOne.html
@@ -53,7 +53,7 @@
         </div>
 
 
-     </div>
+    </div>
 </section>
 
 <section>
@@ -146,11 +146,27 @@
                         <span class="flink-line flink-line-left"></span>
                         <a href="404.html" class="flink-text">Лицензия</a>
                     </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Лицензия</a>
+                    </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Лицензия</a>
+                    </li>
                 </ul>
             </div>
             <div class="footer1-img">
-               <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
-               <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
+                <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
+                <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
             </div>
         </div>
 
