--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -182,6 +182,22 @@
                         <span class="flink-line flink-line-left"></span>
                         <a href="404.html" class="flink-text">Лицензия</a>
                     </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Лицензия</a>
+                    </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Лицензия</a>
+                    </li>
                 </ul>
             </div>
             <div class="footer1-img">
