--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/bootsrap-css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/bootsrap-css/bootstrap-reboot.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -178,103 +177,31 @@
                 <div class="product__item mix category-arcade" data-order="1">
                     <div class="product__item-inner">
                         <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
-                        <div class="product__item-content">
-                            <a class="product__item-title">
-                                шашки
-                            </a>
-                            <a class="product_item-category">
-                                аркады
-                            </a>
-
-                            <div class="product__item-star">
-                                рейтинг
-                            </div>
-                        </div>
                     </div>
                 </div>
 
 
                 <div class="product__item mix category-casino" data-order="2">
                     <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
-                    <div class="product__item-content">
-                        <a class="product__item-title">
-                            1
-                        </a>
-                        <a class="product_item-category">
-                            аркады
-                        </a>
-
-                        <div class="product__item-star">
-                            рейтинг
-                        </div>
-                    </div>
                 </div>
 
 
                 <div class="product__item mix category-logical" data-order="3">
                     <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
-                    <div class="product__item-content">
-                        <a class="product__item-title">
-                            шашки
-                        </a>
-                        <a class="product_item-category">
-                            аркады
-                        </a>
-
-                        <div class="product__item-star">
-                            рейтинг
-                        </div>
-                    </div>
                 </div>
 
 
                 <div class="product__item mix category-desk" data-order="4">
                     <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
-                    <div class="product__item-content">
-                        <a class="product__item-title">
-                            шашки
-                        </a>
-                        <a class="product_item-category">
-                            аркады
-                        </a>
-
-                        <div class="product__item-star">
-                            рейтинг
-                        </div>
-                    </div>
                 </div>
 
 
                 <div class="product__item mix category-logical" data-order="5">
                     <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
-                    <div class="product__item-content">
-                        <a class="product__item-title">
-                            шашки
-                        </a>
-                        <a class="product_item-category">
-                            аркады
-                        </a>
-
-                        <div class="product__item-star">
-                            рейтинг
-                        </div>
-                    </div>
                 </div>
 
                 <div class="product__item mix category-logical" data-order="6">
                     <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
-                    <div class="product__item-content">
-                        <a class="product__item-title">
-                            шашки
-                        </a>
-                        <a class="product_item-category">
-                            аркады
-                        </a>
-
-                        <div class="product__item-star">
-                            рейтинг
-                        </div>
-                    </div>
                 </div>
 
 
@@ -394,6 +321,22 @@
                         <span class="flink-line flink-line-left"></span>
                         <a href="404.html" class="flink-text">Лицензия</a>
                     </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Лицензия</a>
+                    </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="404.html" class="flink-text">Лицензия</a>
+                    </li>
                 </ul>
             </div>
             <div class="footer1-img">
@@ -420,11 +363,11 @@
                 <div class="footer2-content-up">
                     <div class="footer2-content-up-bottom">
                         <div class="img_download_GooglePlay">
-                            <img src="../img/main/AppStore2.svg" alt="">
+                            <img src="img/main/AppStore2.svg" alt="">
                         </div>
                         <div class="img_download_AppStore">
                             <div class="img_download_AppStore">
-                                <img src="../img/main/AppStore.svg" alt="">
+                                <img src="img/main/AppStore.svg" alt="">
                             </div>
                         </div>
                     </div>
