new animation social network

--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -234,13 +234,13 @@
                     </div>
                     <div class="footer2-content-up-icon">
                         <ul class="footer_icon_social_network-list">
-                            <li><a href="#"><i class="fab fa-vk"></i></a></li>
-                            <li><a href="#"><i class="fab fa-telegram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-discord"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-odnoklassniki"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-odnoklassniki"></i></a></li>
+                            <li><a href="https://vk.com/" target="_blank"><i class="fab fa-vk"></i></a></li>
+                            <li><a href="https://telegram.org/" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                            <li><a href="https://discord.com/" target="_blank"><i class="fab fa-discord"></i></a></li>
+                            <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://ok.ru/" target="_blank"><i class="fab fa-odnoklassniki"></i></a></li>
+                            <li><a href="https://web.whatsapp.com/" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                            <li><a href="https://www.viber.com/ru/" target="_blank"><i class="fab fa-viber"></i></a></li>
                         </ul>
                     </div>
                 </div>
