--- a/index.html
+++ b/index.html
@@ -298,36 +298,28 @@
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">О проекте</a>
+                        <a href="html/404.html" class="flink-text">О проекте</a>
                     </li>
                     <li class="flink">
                         <span class="flink-line flink-line-top"></span>
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Реклама</a>
+                        <a href="html/404.html" class="flink-text">Реклама</a>
                     </li>
                     <li class="flink">
                         <span class="flink-line flink-line-top"></span>
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Пожертвование</a>
+                        <a href="html/404.html" class="flink-text">Пожертвование</a>
                     </li>
                     <li class="flink">
                         <span class="flink-line flink-line-top"></span>
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Лицензия</a>
-                    </li>
-
-                    <li class="flink">
-                        <span class="flink-line flink-line-top"></span>
-                        <span class="flink-line flink-line-right"></span>
-                        <span class="flink-line flink-line-bottom"></span>
-                        <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Лицензия</a>
+                        <a href="html/404.html" class="flink-text">Лицензия</a>
                     </li>
 
                     <li class="flink">
@@ -335,7 +327,15 @@
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Лицензия</a>
+                        <a href="html/404.html" class="flink-text">Лицензия</a>
+                    </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="html/404.html" class="flink-text">Лицензия</a>
                     </li>
                 </ul>
             </div>
