--- a/html/GameOne.html
+++ b/html/GameOne.html
@@ -168,6 +168,10 @@
                 <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
                 <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
             </div>
+            <div class="footer1-img">
+                <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
+                <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
+            </div>
         </div>
 
         <div class="footer2">
