--- a/html/article.html
+++ b/html/article.html
@@ -99,6 +99,10 @@
                <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
                <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
             </div>
+            <div class="footer1-img">
+                <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
+                <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
+            </div>
         </div>
 
         <div class="footer2">
