--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
 
 <section>
     <div class="container">
+        <header class="header-inner">
+            <div class="header-button">
+                <a href="index.html"><img src="img/Global/logo.png" alt=""></a>
+            </div>
+
+            <div class="buttons-enters">
+                <div class="button-enter">
+                    <a href="https://vk.com/" target="_blank"><i class="btn-text-enter">Войти</i></a>
+                </div>
+                <div class="button-registration">
+                    <a href="https://vk.com/" target="_blank"><i class="btn-text-enter">Регистрация</i></a>
+                </div>
+            </div>
+
+        </header>
+    </div>
+</section>
+
+<section>
+    <div class="container">
         <div class="breadcrumbs">
             <div class="breadcrumbs__inner">
                 <div class="breadcrumbs__list">
