--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script src="js/main/mixitup.min.js"></script>
 <script src="js/main/script.js"></script>
 <script src="js/main/review.js"></script>
-
+ 
 <section>
     <div class="container">
         <header class="header-inner">
@@ -35,12 +35,22 @@
             </div>
 
             <div class="buttons-enters">
-                <div class="button-enter">
-                    <a href="https://vk.com/" target="_blank"><i class="btn-text-enter">Войти</i></a>
-                </div>
-                <div class="button-registration">
-                    <a href="https://vk.com/" target="_blank"><i class="btn-text-enter">Регистрация</i></a>
-                </div>
+                <ul>`
+                    <li class="hlink">
+                        <span class="hlink-line hlink-line-top"></span>
+                        <span class="hlink-line hlink-line-right"></span>
+                        <span class="hlink-line hlink-line-bottom"></span>
+                        <span class="hlink-line hlink-line-left"></span>
+                        <a href="html/404.html" class="hlink-text">Регистрация</a>
+                    </li>
+                    <li class="hlink">
+                        <span class="hlink-line hlink-line-top"></span>
+                        <span class="hlink-line hlink-line-right"></span>
+                        <span class="hlink-line hlink-line-bottom"></span>
+                        <span class="hlink-line hlink-line-left"></span>
+                        <a href="html/404.html" class="hlink-text">Войти</a>
+                    </li>
+                </ul>
             </div>
 
         </header>
