--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="buttons-enters">
-                <ul>`
+                <ul>
                     <li class="hlink">
                         <span class="hlink-line hlink-line-top"></span>
                         <span class="hlink-line hlink-line-right"></span>
@@ -62,7 +62,7 @@
         <div class="breadcrumbs">
             <div class="breadcrumbs__inner">
                 <div class="breadcrumbs__list">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </div>
             </div>
         </div>
