--- a/html/404.html
+++ b/html/404.html
@@ -13,6 +13,36 @@
     <title>404</title>
 </head>
 <body>
+    <section>
+        <div class="container">
+            <header class="header-inner">
+                <div class="header-button">
+                    <a href="index.html"><img src="../img/Global/logo.png" alt=""></a>
+                </div>
+    
+                <div class="buttons-enters">
+                    <ul>
+                        <li class="hlink">
+                            <span class="hlink-line hlink-line-top"></span>
+                            <span class="hlink-line hlink-line-right"></span>
+                            <span class="hlink-line hlink-line-bottom"></span>
+                            <span class="hlink-line hlink-line-left"></span>
+                            <a href="html/404.html" class="hlink-text">Регистрация</a>
+                        </li>
+                        <li class="hlink">
+                            <span class="hlink-line hlink-line-top"></span>
+                            <span class="hlink-line hlink-line-right"></span>
+                            <span class="hlink-line hlink-line-bottom"></span>
+                            <span class="hlink-line hlink-line-left"></span>
+                            <a href="html/404.html" class="hlink-text">Войти</a>
+                        </li>
+                    </ul>
+                </div>
+    
+            </header>
+        </div>
+    </section>
+
 <section>
         <div class="spider">
             <div class="spiderweb"></div>
