--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -18,6 +18,37 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="../js/GameOne/script.js"></script>
+
+<section>
+    <div class="container">
+        <header class="header-inner">
+            <div class="header-button">
+                <a href="index.html"><img src="../img/Global/logo.png" alt=""></a>
+            </div>
+
+            <div class="buttons-enters">
+                <ul>
+                    <li class="hlink">
+                        <span class="hlink-line hlink-line-top"></span>
+                        <span class="hlink-line hlink-line-right"></span>
+                        <span class="hlink-line hlink-line-bottom"></span>
+                        <span class="hlink-line hlink-line-left"></span>
+                        <a href="html/404.html" class="hlink-text">Регистрация</a>
+                    </li>
+                    <li class="hlink">
+                        <span class="hlink-line hlink-line-top"></span>
+                        <span class="hlink-line hlink-line-right"></span>
+                        <span class="hlink-line hlink-line-bottom"></span>
+                        <span class="hlink-line hlink-line-left"></span>
+                        <a href="html/404.html" class="hlink-text">Войти</a>
+                    </li>
+                </ul>
+            </div>
+
+        </header>
+    </div>
+</section>
+
 <section>
     <div class="container">
         <div class="breadcrumbs">
