--- a/html/GameOne.html
+++ b/html/GameOne.html
@@ -23,7 +23,7 @@
     <div class="container">
         <header class="header-inner">
             <div class="header-button">
-                <a href="index.html"><img src="../img/Global/logo.png" alt=""></a>
+                <a href="../index.html"><img src="../img/Global/logo.png" alt=""></a>
             </div>
 
             <div class="buttons-enters">
