--- a/html/404.html
+++ b/html/404.html
@@ -27,14 +27,14 @@
                             <span class="hlink-line hlink-line-right"></span>
                             <span class="hlink-line hlink-line-bottom"></span>
                             <span class="hlink-line hlink-line-left"></span>
-                            <a href="html/404.html" class="hlink-text">Регистрация</a>
+                            <a href="404.html" class="hlink-text">Регистрация</a>
                         </li>
                         <li class="hlink">
                             <span class="hlink-line hlink-line-top"></span>
                             <span class="hlink-line hlink-line-right"></span>
                             <span class="hlink-line hlink-line-bottom"></span>
                             <span class="hlink-line hlink-line-left"></span>
-                            <a href="html/404.html" class="hlink-text">Войти</a>
+                            <a href="404.html" class="hlink-text">Войти</a>
                         </li>
                     </ul>
                 </div>
