--- a/html/article.html
+++ b/html/article.html
@@ -110,7 +110,7 @@
             <div class="footer2-logo">
                 <div class="footer-logo-img">
                     <div class="footer-logo-prototip">
-                        <img src="../img/Global/logo.png" alt="">
+                        <img src="../img/Global/logo-new.png" alt="">
                     </div>
 
                     <div class="footer2-logo-text">
