--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <header class="header-inner">
             <div class="header-button">
-                <a href="index.html"><img src="img/Global/logo.png" alt=""></a>
+                <a href="index.html"><img src="img/Global/logo-new.png" alt=""></a>
             </div>
 
             <div class="buttons-enters">
@@ -385,7 +385,7 @@
             <div class="footer2-logo">
                 <div class="footer-logo-img">
                     <div class="footer-logo-prototip">
-                        <img src="img/Global/logo.png" alt="">
+                        <img src="img/Global/logo-new.png" alt="">
                     </div>
 
                     <div class="footer2-logo-text">
