popap for enter fix

--- a/html/404.html
+++ b/html/404.html
@@ -35,7 +35,7 @@
                             <span class="hlink-line hlink-line-right"></span>
                             <span class="hlink-line hlink-line-bottom"></span>
                             <span class="hlink-line hlink-line-left"></span>
-                            <a href="404.html" class="hlink-text" data-fancybox data-src="#modal" href="javascript:;">Войти</a>
+                            <a class="hlink-text" data-fancybox data-src="#modal" href="javascript:;">Войти</a>
                         </li>
                     </ul>
                 </div>
