--- a/html/404.html
+++ b/html/404.html
@@ -214,6 +214,6 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.js"></script>
-<scriptscriptscript src="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.js"></scriptscriptscript>
+<script src="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.js"></script>
 </body>
 </html>
