--- a/html/404.html
+++ b/html/404.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<link rel="stylesheet" href="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -213,7 +213,7 @@
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.js"></script>
-<script src="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
 </body>
 </html>
