--- a/html/404.html
+++ b/html/404.html
@@ -14,6 +14,8 @@
     <title>404</title>
 </head>
 <body>
+
+
     <section>
         <div class="container">
             <header class="header-inner">
@@ -43,6 +45,19 @@
             </header>
         </div>
     </section>
+
+<section>
+    <div class="container">
+        <div class="breadcrumbs">
+            <div class="breadcrumbs__inner">
+                <div class="breadcrumbs__list">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><span>Ошибка 404</span></li>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <section>
         <div class="spider">
