--- a/html/GameOne.html
+++ b/html/GameOne.html
@@ -116,7 +116,7 @@
                     <a href="#">Watch video</a>
                 </div>
                 <div class="tabs-content__right">
-                    <img src="../img/GamesOne/article1.jpg" alt="">
+                    <img src="../img/GamesOne/article3.png" alt="">
                 </div>
             </div>
 
