add popap-registration in animate on 404

--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -307,7 +307,7 @@
                 <input type="text" placeholder="UserName" required>
             </label>
             <label class="login-label-pass">
-                <input type="text" placeholder="Password" required>
+                <input type="password" placeholder="Password" required>
             </label>
             <button class="popap-button" type="submit">
                 <div class="popap-button-enter">
