add page Calc-iOS

--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -228,7 +228,7 @@
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Лицензия</a>
+                        <a href="404.html" class="flink-text">Контакты</a>
                     </li>
                 </ul>
             </div>
