--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="slider__item">
 
                 <div class="slider__item-title">
-                    Онлайн казино 1
+                    ИГРОМАНИЯ
                 </div>
 
             </div>
@@ -159,7 +159,7 @@
             <div class="slider__item">
 
                 <div class="slider__item-title">
-                    Онлайн казино 2
+                    ИГРОМАНИЯ
                 </div>
 
             </div>
@@ -167,7 +167,7 @@
             <div class="slider__item">
 
                 <div class="slider__item-title">
-                    Онлайн казино 3
+                    ИГРОМАНИЯ
                 </div>
 
             </div>
@@ -175,7 +175,7 @@
             <div class="slider__item">
 
                 <div class="slider__item-title">
-                    Онлайн казино 4
+                    ИГРОМАНИЯ
                 </div>
 
             </div>
@@ -183,7 +183,7 @@
             <div class="slider__item">
 
                 <div class="slider__item-title">
-                    Онлайн казино 5
+                    ИГРОМАНИЯ
                 </div>
 
             </div>
@@ -203,7 +203,7 @@
                 <button type="button" data-filter=".category-arcade">АРКАДЫ</button>
                 <button type="button" data-filter=".category-desk">НАСТОЛЬНЫЕ</button>
                 <button type="button" data-filter=".category-logical">ЛОГИЧЕСКИЕ</button>
-                <button type="button" data-filter=".category-casino">КАЗИНО</button>
+                <button type="button" data-filter=".category-apps">ПРИЛОЖЕНИЯ</button>
             </div>
             <div class="products__inner-box">
                 <div class="product__item mix category-arcade" data-order="1">
@@ -213,8 +213,8 @@
                 </div>
 
 
-                <div class="product__item mix category-casino" data-order="2">
-                    <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                <div class="product__item mix category-apps" data-order="2">
+                    <a class="product__item-img" href="html/GameOne-Calc-iOS.html" style="background-image: url(img/GamesOne/Game-calc-iOS.png); background-size:contain"></a>
                 </div>
 
 
@@ -367,7 +367,7 @@
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="html/404.html" class="flink-text">Лицензия</a>
+                        <a href="html/404.html" class="flink-text">Контакты</a>
                     </li>
                 </ul>
             </div>
