--- a/html/article.html
+++ b/html/article.html
@@ -7,10 +7,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Article</title>
 </head>
 <body>
+    <section>
+        <div class="container">
+            <header class="header-inner">
+                <div class="header-button">
+                    <a href="../index.html"><img src="../img/Global/logo-new.png" alt=""></a>
+                </div>
+    
+                <div class="buttons-enters">
+                    <ul>
+                        <li class="hlink">
+                            <span class="hlink-line hlink-line-top"></span>
+                            <span class="hlink-line hlink-line-right"></span>
+                            <span class="hlink-line hlink-line-bottom"></span>
+                            <span class="hlink-line hlink-line-left"></span>
+                            <a class="hlink-text" data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;">Регистрация</a>
+                        </li>
+                        <li class="hlink">
+                            <span class="hlink-line hlink-line-top"></span>
+                            <span class="hlink-line hlink-line-right"></span>
+                            <span class="hlink-line hlink-line-bottom"></span>
+                            <span class="hlink-line hlink-line-left"></span>
+                            <a class="hlink-text" data-fancybox data-src="#modal" href="javascript:;">Войти</a>
+                        </li>
+                    </ul>
+                </div>
+    
+            </header>
+        </div>
+    </section>
+
 <section>
     <div class="container">
         <h3 class="title-main-middle">Персональный подбор статей</h3>
@@ -32,30 +63,7 @@
         </div>
     </div>
 </section>
-<section>
-    <div class="container">
-            <div class="article__content">
-                <div class="article__content-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At delectus deserunt doloremque, eius
-                    eveniet expedita harum hic illo incidunt nisi quaerat quas quis quod repellendus rerum sequi sit
-                    suscipit voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At delectus deserunt doloremque, eius
-                    eveniet expedita harum hic illo incidunt nisi quaerat quas quis quod repellendus rerum sequi sit
-                    suscipit voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At delectus deserunt doloremque, eius
-                    eveniet expedita harum hic illo incidunt nisi quaerat quas quis quod repellendus rerum sequi sit
-                    suscipit voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At delectus deserunt doloremque, eius
-                    eveniet expedita harum hic illo incidunt nisi quaerat quas quis quod repellendus rerum sequi sit
-                    suscipit voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At delectus deserunt doloremque, eius
-                    eveniet expedita harum hic illo incidunt nisi quaerat quas quis quod repellendus rerum sequi sit
-                    suscipit voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At delectus deserunt doloremque, eius
-                    eveniet expedita harum hic illo incidunt nisi quaerat quas quis quod repellendus rerum sequi sit
-                    suscipit voluptates.
-                </div>
-            </div>
-    </div>
-</section>
-<section>
 
-</section>
 
 
 <!--ВЁРСТКА ФУТЕРА-->
@@ -159,6 +167,54 @@
         </div>
     </div>
 </section>
+
+<div  style="display: none;" id="modal">
+    <div class="login-wrapper">
+        <div class="login-title">
+            Вход на сайт
+        </div>
+        <form class="form-enter">
+            <label class="login-label-name">
+                <input type="text" placeholder="UserName" required>
+            </label>
+            <label class="login-label-pass">
+                <input type="password" placeholder="Password" required>
+            </label>
+            <button class="popap-button" type="submit">
+                <div class="popap-button-enter">
+                    Войти
+                </div>
+            </button>
+        </form>
+    </div>
+</div>
+
+<div style="display: none;" id="animatedModal" class="animated-modal">
+    <h2>Регистрация</h2>
+    <div class="login-wrapper">
+        <form class="form-enter">
+            <label class="login-label-name">
+                <input type="text" placeholder="UserName" required>
+            </label>
+            <label class="login-label-email">
+                <input type="email" placeholder="Email" required>
+            </label>
+            <label class="login-label-pass">
+                <input type="password" placeholder="Password" required>
+            </label>
+
+            <button class="popap-button2" type="submit">
+                <div class="popap-button2-register">
+                    Зарегистрироваться
+                </div>
+            </button>
+        </form>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
 
 
 </body>
