--- a/html/article.html
+++ b/html/article.html
@@ -42,6 +42,19 @@
         </div>
     </section>
 
+    <section>
+        <div class="container">
+            <div class="breadcrumbs">
+                <div class="breadcrumbs__inner">
+                    <div class="breadcrumbs__list">
+                        <li><a href="../index.html">Home</a></li>
+                        <li><span>Статья №...</span></li>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 <section>
     <div class="container">
         <h3 class="title-main-middle">Персональный подбор статей</h3>
