--- a/html/GameOne-Calc-iOS.html
+++ b/html/GameOne-Calc-iOS.html
@@ -57,7 +57,7 @@
                 <div class="breadcrumbs__list">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="GamesPages.html">Games Pages</a></li>
-                    <li><span>Name games</span></li>
+                    <li><span>Калькулятор как в iPhone</span></li>
                 </div>
             </div>
         </div>
