--- a/html/GameOne-Calc-iOS.html
+++ b/html/GameOne-Calc-iOS.html
@@ -74,7 +74,7 @@
                     Калькулятор как в iPhone
                 </div>
                 <div class="test-standart">
-                    Данное приложение разработано на React и представляет собой калькулятор как в Apple iPhone.<br>
+                    Данное приложение разработано на Javascript и представляет собой калькулятор как в Apple iPhone.<br>
                     Он оно пока ещё в процессе создания)
                 </div>
             </div>
