add ad to GameList

--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -127,6 +127,18 @@
 
 <section>
     <div class="container">
+        <div class="advertisement-wrapper">
+            <div class="advertisement">
+                <div class="advertisement-text">
+                    Здесь могла быть ваша реклама
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
         <div class="tabs-inner">
             <div class="btn-box">
                 <button id="btn1" onclick="openHTML()">Описание</button>
