--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="reviews" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
                 <div class="title-reviews">
-                    <a href="404.html">Отзыв 1</a>
+                    <a href="/html/404.html">Отзыв 1</a>
                 </div>
                 <div class="content-reviews">
                     Сыграл в казино и стал олигархом. Лучшее казино в мире. выиграл миллиард. Выплата на следующий день всё честно.
@@ -276,7 +276,7 @@
 
             <div class="reviews" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <div class="title-reviews">
-                    <a href="404.html">Отзыв 2</a>
+                    <a href="/html/404.html">Отзыв 2</a>
                 </div>
                 <div class="content-reviews">
                     Сыграл в казино и стал олигархом. Лучшее казино в мире. выиграл миллиард. Выплата на следующий день всё честно.
@@ -285,7 +285,7 @@
 
             <div class="reviews" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <div class="title-reviews">
-                    <a href="404.html">Отзыв 3</a>
+                    <a href="/html/404.html">Отзыв 3</a>
                 </div>
                 <div class="content-reviews">
                     Сыграл в казино и стал олигархом. Лучшее казино в мире. выиграл миллиард. Выплата на следующий день всё честно.
@@ -296,7 +296,7 @@
         <div class="list_reviews" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             <div class="reviews">
                 <div class="title-reviews">
-                    <a href="404.html">Отзыв 4</a>
+                    <a href="/html/404.html">Отзыв 4</a>
                 </div>
                 <div class="content-reviews">
                     Сыграл в казино и стал олигархом. Лучшее казино в мире. выиграл миллиард. Выплата на следующий день всё честно.
@@ -305,7 +305,7 @@
 
             <div class="reviews" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <div class="title-reviews">
-                    <a href="404.html">Отзыв 5</a>
+                    <a href="/html/404.html">Отзыв 5</a>
                 </div>
                 <div class="content-reviews">
                     Сыграл в казино и стал олигархом. Лучшее казино в мире. выиграл миллиард. Выплата на следующий день всё честно.
@@ -314,7 +314,7 @@
 
             <div class="reviews" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <div class="title-reviews">
-                    <a href="404.html">Отзыв 6</a>
+                    <a href="/html/404.html">Отзыв 6</a>
                 </div>
                 <div class="content-reviews">
                     Сыграл в казино и стал олигархом. Лучшее казино в мире. выиграл миллиард. Выплата на следующий день всё честно.
