fix footer on article page

--- a/html/article.html
+++ b/html/article.html
@@ -114,6 +114,21 @@
                         <span class="flink-line flink-line-left"></span>
                         <a href="404.html" class="flink-text">Лицензия</a>
                     </li>
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="html/404.html" class="flink-text">Карта сайта</a>
+                    </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="html/404.html" class="flink-text">Контакты</a>
+                    </li>
                 </ul>
             </div>
             <div class="footer1-img">
