--- a/html/404.html
+++ b/html/404.html
@@ -236,6 +236,9 @@
             <label class="login-label-email">
                 <input type="email" placeholder="Email" required>
             </label>
+            <label class="login-label-phone">
+                <input name="phone" placeholder="Your phone" required>
+            </label>
             <label class="login-label-pass">
                 <input type="password" placeholder="Password" required>
             </label>
@@ -252,5 +255,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
+<script src="../js/jquery.maskedinput.min.js"></script>
+<script src="../js/mask.js"></script>
 </body>
 </html>
