--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -344,6 +344,9 @@
             <label class="login-label-email">
                 <input type="email" placeholder="Email" required>
             </label>
+            <label class="login-label-phone">
+                <input name="phone" placeholder="Your phone" required>
+            </label>
             <label class="login-label-pass">
                 <input type="password" placeholder="Password" required>
             </label>
@@ -356,6 +359,9 @@
         </form>
     </div>
 </div>
+
+<script src="../js/jquery.maskedinput.min.js"></script>
+<script src="../js/mask.js"></script>
 
 <script>
     var content1 = document.getElementById("content1");
