--- a/index.html
+++ b/index.html
@@ -478,6 +478,9 @@
             <label class="login-label-email">
                 <input type="email" placeholder="Email" required>
             </label>
+            <label class="login-label-phone">
+                <input name="phone" placeholder="Your phone" required>
+            </label>
             <label class="login-label-pass">
                 <input type="password" placeholder="Password" required>
             </label>
@@ -502,8 +505,10 @@
 
 <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="js/main/slick.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/main/GamesScript.js"></script>
 <script src="js/main/mixitup.min.js"></script>
+<script src="js/mask.js"></script>
 <script src="js/main/script.js"></script>
 <script src="js/main/review.js"></script>
 
