add calc  iOS iPhone

--- a/html/GameOne-Calc-iOS.html
+++ b/html/GameOne-Calc-iOS.html
@@ -82,10 +82,10 @@
 
 
         <div class="Game-Button">
-            <a href="#" class="btn">Запустить</a>
+            <a href="../app/Calc-on-iPhone-JS/index.html" class="btn" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "560px"}}}'> ИГРАТЬ В КАЛЬКУЛЯТОР</a>
         </div>
 
-
+        
     </div>
 </section>
 
@@ -100,7 +100,7 @@
             <div id="content1" class="tabs-content">
                 <div class="tabs-content__left">
                     <p>
-                        Данное приложение разработано на React и представляет собой калькулятор как в Apple iPhone.<br>
+                        Данное приложение разработано на JavaScript и представляет собой калькулятор как в Apple iPhone.<br>
                         Он оно пока ещё в процессе создания)
                     </p>
                     <a href="#">Демонстрация</a>
