--- a/html/GamesPages.html
+++ b/html/GamesPages.html
@@ -69,56 +69,56 @@
         <div class="list_games">
             <div class="games">
                 <div class="image-games">
-                    <a href="GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
                 </div>
                 <div class="title-games">
-                    <a href="GameOne.html">Название игры</a>
+                    <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
             <div class="games">
                 <div class="image-games">
-                    <a href="GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
                 </div>
                 <div class="title-games">
-                    <a href="GameOne.html">Название игры</a>
+                    <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
             <div class="games">
                 <div class="image-games">
-                    <a href="GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
                 </div>
                 <div class="title-games">
-                    <a href="GameOne.html">Название игры</a>
+                    <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
         </div>
         <div class="list_games">
             <div class="games">
                 <div class="image-games">
-                    <a href="GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
                 </div>
                 <div class="title-games">
-                    <a href="GameOne.html">Название игры</a>
+                    <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
             <div class="games">
                 <div class="image-games">
-                    <a href="GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
                 </div>
                 <div class="title-games">
-                    <a href="GameOne.html">Название игры</a>
+                    <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
 
             <div class="games">
                 <div class="image-games">
-                    <a href="GameOne.html"><img src="../img/main/article3.png" alt=""></a>
+                    <a href="GamesOne/GameOne.html"><img src="../img/main/article3.png" alt=""></a>
                 </div>
                 <div class="title-games">
-                    <a href="GameOne.html">Название игры</a>
+                    <a href="GamesOne/GameOne.html">Название игры</a>
                 </div>
             </div>
         </div>
