--- a/index.html
+++ b/index.html
@@ -205,32 +205,32 @@
             <div class="products__inner-box">
                 <div class="product__item mix category-arcade" data-order="1">
                     <div class="product__item-inner">
-                        <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                        <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
                     </div>
                 </div>
 
 
                 <div class="product__item mix category-apps" data-order="2">
-                    <a class="product__item-img" href="html/GameOne-Calc-iOS.html" style="background-image: url(img/GamesOne/Game-calc-iOS.png); background-size:contain"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne-Calc-iOS.html" style="background-image: url(img/GamesOne/Game-calc-iOS.png); background-size:contain"></a>
                 </div>
 
 
                 <div class="product__item mix category-logical" data-order="3">
-                    <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
                 </div>
 
 
                 <div class="product__item mix category-desk" data-order="4">
-                    <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
                 </div>
 
 
                 <div class="product__item mix category-logical" data-order="5">
-                    <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
                 </div>
 
                 <div class="product__item mix category-logical" data-order="6">
-                    <a class="product__item-img" href="html/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
                 </div>
 
 
