--- a/html/GamesOne/GameOne.html
+++ b/html/GamesOne/GameOne.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>GameOne</title>
 </head>
 <body>
@@ -18,13 +18,13 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="../js/GameOne/script.js"></script>
+<script src="../../js/GameOne/script.js"></script>
 
 <section>
     <div class="container">
         <header class="header-inner">
             <div class="header-button">
-                <a href="../index.html"><img src="../img/Global/logo-new.png" alt=""></a>
+                <a href="../../index.html"><img src="../../img/Global/logo-new.png" alt=""></a>
             </div>
 
             <div class="buttons-enters">
@@ -55,8 +55,8 @@
         <div class="breadcrumbs">
             <div class="breadcrumbs__inner">
                 <div class="breadcrumbs__list">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="GamesPages.html">Games Pages</a></li>
+                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="../GamesPages.html">Games Pages</a></li>
                     <li><span>Name games</span></li>
                 </div>
             </div>
@@ -66,7 +66,7 @@
             <div class="Game">
                 <div class="img-inner">
                     <div class="Game_img">
-                        <img src="../img/GamesOne/article3.png" alt="">
+                        <img src="../../img/GamesOne/article3.png" alt="">
                     </div>
                 </div>
 
@@ -104,7 +104,7 @@
                     <a href="#">Watch video</a>
                 </div>
                 <div class="tabs-content__right">
-                    <img src="../img/GamesOne/article3.png" alt="">
+                    <img src="../../img/GamesOne/article3.png" alt="">
                 </div>
             </div>
 
@@ -116,7 +116,7 @@
                     <a href="#">Watch video</a>
                 </div>
                 <div class="tabs-content__right">
-                    <img src="../img/GamesOne/article3.png" alt="">
+                    <img src="../../img/GamesOne/article3.png" alt="">
                 </div>
             </div>
 
@@ -129,7 +129,7 @@
                     <a href="#">ссылка</a>
                 </div>
                 <div class="tabs-content__right">
-                    <img src="../img/GamesOne/GitHub.png" alt="">
+                    <img src="../../img/GamesOne/GitHub.png" alt="">
                 </div>
             </div>
 
@@ -155,36 +155,28 @@
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">О проекте</a>
+                        <a href="../404.html" class="flink-text">О проекте</a>
                     </li>
                     <li class="flink">
                         <span class="flink-line flink-line-top"></span>
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Реклама</a>
+                        <a href="../404.html" class="flink-text">Реклама</a>
                     </li>
                     <li class="flink">
                         <span class="flink-line flink-line-top"></span>
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Пожертвование</a>
+                        <a href="../404.html" class="flink-text">Пожертвование</a>
                     </li>
                     <li class="flink">
                         <span class="flink-line flink-line-top"></span>
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Лицензия</a>
-                    </li>
-
-                    <li class="flink">
-                        <span class="flink-line flink-line-top"></span>
-                        <span class="flink-line flink-line-right"></span>
-                        <span class="flink-line flink-line-bottom"></span>
-                        <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Карта сайта</a>
+                        <a href="../404.html" class="flink-text">Лицензия</a>
                     </li>
 
                     <li class="flink">
@@ -192,17 +184,25 @@
                         <span class="flink-line flink-line-right"></span>
                         <span class="flink-line flink-line-bottom"></span>
                         <span class="flink-line flink-line-left"></span>
-                        <a href="404.html" class="flink-text">Контакты</a>
+                        <a href="../404.html" class="flink-text">Карта сайта</a>
+                    </li>
+
+                    <li class="flink">
+                        <span class="flink-line flink-line-top"></span>
+                        <span class="flink-line flink-line-right"></span>
+                        <span class="flink-line flink-line-bottom"></span>
+                        <span class="flink-line flink-line-left"></span>
+                        <a href="../404.html" class="flink-text">Контакты</a>
                     </li>
                 </ul>
             </div>
             <div class="footer1-img">
-                <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
-                <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
+                <img src="../../img/Global/Footer/mushroom.png" alt="" class="mushroom">
+                <img src="../../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
             </div>
             <div class="footer1-img">
-                <img src="../img/Global/Footer/mushroom.png" alt="" class="mushroom">
-                <img src="../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
+                <img src="../../img/Global/Footer/mushroom.png" alt="" class="mushroom">
+                <img src="../../img/Global/Footer/mushroom1.png" alt="" class="mushroom1">
             </div>
         </div>
 
@@ -211,7 +211,7 @@
             <div class="footer2-logo">
                 <div class="footer-logo-img">
                     <div class="footer-logo-prototip">
-                        <img src="../img/Global/logo-new.png" alt="">
+                        <img src="../../img/Global/logo-new.png" alt="">
                     </div>
 
                     <div class="footer2-logo-text">
@@ -224,11 +224,11 @@
                 <div class="footer2-content-up">
                     <div class="footer2-content-up-bottom">
                         <div class="img_download_GooglePlay">
-                            <img src="../img/main/AppStore2.svg" alt="">
+                            <img src="../../img/main/AppStore2.svg" alt="">
                         </div>
                         <div class="img_download_AppStore">
                             <div class="img_download_AppStore">
-                                <img src="../img/main/AppStore.svg" alt="">
+                                <img src="../../img/main/AppStore.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -311,8 +311,8 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
-<script src="../js/jquery.maskedinput.min.js"></script>
-<script src="../js/mask.js"></script>
+<script src="../../js/jquery.maskedinput.min.js"></script>
+<script src="../../js/mask.js"></script>
 
 </body>
 
