--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 
                 <div class="product__item mix category-logical" data-order="3">
-                    <a class="product__item-img" href="html/GamesOne/GameOne.html" style="background-image: url(img/main/article1.jpg)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne-TicTacToe.html" style="background-image: url(img/GamesOne/TicTacToe.png)"></a>
                 </div>
 
 
