add TicTacToe and several bugs fixed

--- a/html/GamesOne/GameOne-Calc-iOS.html
+++ b/html/GamesOne/GameOne-Calc-iOS.html
@@ -24,7 +24,7 @@
     <div class="container">
         <header class="header-inner">
             <div class="header-button">
-                <a href="../index.html"><img src="../../img/Global/logo-new.png" alt=""></a>
+                <a href="../../index.html"><img src="../../img/Global/logo-new.png" alt=""></a>
             </div>
 
             <div class="buttons-enters">
@@ -74,8 +74,7 @@
                     Калькулятор как в iPhone
                 </div>
                 <div class="test-standart">
-                    Данное приложение разработано на Javascript и представляет собой калькулятор как в Apple iPhone.<br>
-                    Он оно пока ещё в процессе создания)
+                    Данное приложение написано на Javascript и представляет собой калькулятор как в Apple iPhone.
                 </div>
             </div>
         </div>
@@ -100,8 +99,7 @@
             <div id="content1" class="tabs-content">
                 <div class="tabs-content__left">
                     <p>
-                        Данное приложение разработано на JavaScript и представляет собой калькулятор как в Apple iPhone.<br>
-                        Он оно пока ещё в процессе создания)
+                        Данное приложение написано на JavaScript и представляет собой калькулятор как в Apple iPhone.
                     </p>
                     <a href="#">Демонстрация</a>
                 </div>
@@ -140,9 +138,6 @@
     </div>
 </section>
 
-<section>
-    <div class="lol"></div>
-</section>
 
 
 <!--ВЁРСТКА ФУТЕРА-->
