--- a/html/GamesOne/GameOne-TicTacToe.html
+++ b/html/GamesOne/GameOne-TicTacToe.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Calc as iPhones</title>
+    <title>Крестики-нолики</title>
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -18,13 +18,13 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="../../js/GameOne/script.js"></script>
+
 
 <section>
     <div class="container">
         <header class="header-inner">
             <div class="header-button">
-                <a href="../index.html"><img src="../../img/Global/logo-new.png" alt=""></a>
+                <a href="../../index.html"><img src="../../img/Global/logo-new.png" alt=""></a>
             </div>
 
             <div class="buttons-enters">
@@ -74,14 +74,14 @@
                     Крестики-нолики
                 </div>
                 <div class="test-standart">
-                    Данное приложение разработано на Javascript и представляет собой игру крестики-нолики.<br>
+                    Данное приложение написано на Javascript и представляет собой игру крестики-нолики.
                 </div>
             </div>
         </div>
 
 
         <div class="Game-Button">
-            <a href="../../app/Calc-on-iPhone-JS/index.html" class="btn" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "560px"}}}'> ИГРАТЬ В КРЕСТИКИ-НОЛИКИ</a>
+            <a href="../../app/TicTacToe/index.html" class="btn" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "1010px"}}}'> ИГРАТЬ В КРЕСТИКИ-НОЛИКИ</a>
         </div>
 
         
@@ -99,8 +99,7 @@
             <div id="content1" class="tabs-content">
                 <div class="tabs-content__left">
                     <p>
-                        Данное приложение разработано на JavaScript и представляет собой калькулятор как в Apple iPhone.<br>
-                        Он оно пока ещё в процессе создания)
+                        Данное приложение разработано на JavaScript и представляет собой калькулятор как в Apple iPhone.
                     </p>
                     <a href="#">Демонстрация</a>
                 </div>
@@ -139,9 +138,7 @@
     </div>
 </section>
 
-<section>
-    <div class="lol"></div>
-</section>
+
 
 
 <!--ВЁРСТКА ФУТЕРА-->
@@ -314,6 +311,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
 <script src="../../js/jquery.maskedinput.min.js"></script>
 <script src="../../js/mask.js"></script>
+<script src="../../js/GameOne/script.js"></script>
 
 </body>
 
