new img on Calc and TicTacToe

--- a/html/GamesOne/GameOne-Calc-iOS.html
+++ b/html/GamesOne/GameOne-Calc-iOS.html
@@ -66,7 +66,7 @@
             <div class="Game">
                 <div class="img-inner">
                     <div class="Game_img">
-                        <img src="../../img/GamesOne/Game-calc-iOS.png" alt="">
+                        <img src="../../img/GamesOne/Calc-on-iPhone-JS.svg" alt="">
                     </div>
                 </div>
 
