--- a/html/GamesOne/GameOne-TicTacToe.html
+++ b/html/GamesOne/GameOne-TicTacToe.html
@@ -66,7 +66,7 @@
             <div class="Game">
                 <div class="img-inner">
                     <div class="Game_img">
-                        <img src="../../img/GamesOne/TicTacToe.png" alt="">
+                        <img src="../../img/GamesOne/TicTacToe.svg" alt="">
                     </div>
                 </div>
 
