--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
 
 
                 <div class="product__item mix category-apps" data-order="2">
-                    <a class="product__item-img" href="html/GamesOne/GameOne-Calc-iOS.html" style="background-image: url(img/GamesOne/Game-calc-iOS.png); background-size:contain"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne-Calc-iOS.html" style="background-image: url(img/GamesOne/Calc-on-iPhone-JS.svg); background-size:contain"></a>
                 </div>
 
 
                 <div class="product__item mix category-logical" data-order="3">
-                    <a class="product__item-img" href="html/GamesOne/GameOne-TicTacToe.html" style="background-image: url(img/GamesOne/TicTacToe.png)"></a>
+                    <a class="product__item-img" href="html/GamesOne/GameOne-TicTacToe.html" style="background-image: url(img/GamesOne/TicTacToe.svg)"></a>
                 </div>
 
 
